<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_layout"
            tools:context=".drinks.view.AddDrinkActivity">

            <TextView
                android:id="@+id/upper_tv"
                style="@style/Small_Text_Style"
                android:gravity="center"
                android:text="@string/add_drink_top"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/on_info"
                style="@style/Small_Text_Style"
                android:gravity="center"
                android:text="@string/stars"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upper_tv" />

            <TextView
                android:id="@+id/drink_type_tv"
                style="@style/Text_Style"
                android:gravity="center_vertical"
                android:text="@string/drink_type"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/on_info" />

            <RadioGroup
                android:id="@+id/drink_type_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_type_tv">

                <RadioButton
                    android:id="@+id/coffee_rb"
                    style="@style/Input_Field_Style"
                    android:text="@string/coffee" />

                <RadioButton
                    android:id="@+id/tea_rb"
                    style="@style/Input_Field_Style"
                    android:text="@string/tea" />

                <RadioButton
                    android:id="@+id/other_rb"
                    style="@style/Input_Field_Style"
                    android:text="@string/other" />
            </RadioGroup>

            <TextView
                android:id="@+id/drink_name_tv"
                style="@style/Text_Style"
                android:gravity="center_vertical"
                android:text="@string/drink_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_type_rg" />

            <EditText
                android:id="@+id/drink_name_et"
                style="@style/Input_Field_Style"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_name_tv" />

            <TextView
                android:id="@+id/drink_description_tv"
                style="@style/Text_Style"
                android:gravity="center_vertical"
                android:text="@string/drink_description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_name_et" />

            <EditText
                android:id="@+id/drink_description_et"
                style="@style/Input_Field_Style"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_description_tv" />

            <TextView
                android:id="@+id/drink_capacity_tv"
                style="@style/Text_Style"
                android:gravity="center_vertical"
                android:text="@string/drink_capacity_ml"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_description_et" />

            <EditText
                android:id="@+id/drink_capacity_et"
                style="@style/Input_Field_Style"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_capacity_tv" />

            <LinearLayout
                android:id="@+id/price_ll"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_capacity_et">

                <TextView
                    style="@style/Text_Style"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/eiro_et"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:inputType="number"
                    android:minWidth="80dp" />

                <TextView
                    style="@style/Text_Style"
                    android:text="@string/dot" />

                <EditText
                    android:id="@+id/centi_et"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:inputType="number"
                    android:minWidth="80dp" />

                <TextView
                    style="@style/Text_Style"
                    android:text="@string/space_euro_sign" />

            </LinearLayout>

            <TextView
                android:id="@+id/under_info"
                style="@style/Small_Text_Style"
                android:gravity="center"
                android:text="@string/stars"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_ll" />

            <Button
                android:id="@+id/add_drink_button"
                style="@style/Button_Style"
                android:text="@string/add_new_drink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/under_info" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>