<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.bestconfectioneries.confectioneries.viewmodel.ConfectioneryViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".confectioneries.view.EditConfectioneryActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_layout"
                app:oneConfectioneryStatus="@{viewModel.status}">

                <TextView
                    android:id="@+id/upper_tv"
                    style="@style/Small_Text_Style"
                    android:gravity="center"
                    android:text="@string/add_conf_top"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/on_info"
                    style="@style/Small_Text_Style"
                    android:gravity="center"
                    android:text="@string/stars"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/upper_tv" />

                <TextView
                    android:id="@+id/conf_tv"
                    style="@style/Text_Style"
                    android:gravity="center_vertical"
                    android:text="@string/confectionery"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/on_info" />

                <EditText
                    android:id="@+id/conf_et"
                    style="@style/Input_Field_Style"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_tv" />

                <TextView
                    android:id="@+id/conf_description_tv"
                    style="@style/Text_Style"
                    android:gravity="center_vertical"
                    android:text="@string/description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_et" />

                <EditText
                    android:id="@+id/conf_description_et"
                    style="@style/Input_Field_Style"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_description_tv" />

                <TextView
                    android:id="@+id/conf_address_tv"
                    style="@style/Text_Style"
                    android:gravity="center_vertical"
                    android:text="@string/address"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_description_et" />

                <EditText
                    android:id="@+id/conf_address_et"
                    style="@style/Input_Field_Style"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_address_tv" />

                <TextView
                    android:id="@+id/conf_email_tv"
                    style="@style/Text_Style"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_address_et" />

                <EditText
                    android:id="@+id/conf_email_et"
                    style="@style/Input_Field_Style"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_email_tv" />

                <TextView
                    android:id="@+id/conf_phone_tv"
                    style="@style/Text_Style"
                    android:gravity="center_vertical"
                    android:text="@string/phone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_email_et" />

                <EditText
                    android:id="@+id/conf_phone_et"
                    style="@style/Input_Field_Style"
                    android:inputType="number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_phone_tv" />

                <TextView
                    android:id="@+id/under_info"
                    style="@style/Small_Text_Style"
                    android:gravity="center"
                    android:text="@string/stars"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conf_phone_et" />

                <Button
                    android:id="@+id/add_conf_button"
                    style="@style/Button_Style"
                    android:text="@string/update_confectionery"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/under_info" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/Small_Text_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/btn_height"
                android:gravity="center"
                android:text="@string/loading"
                app:confectioneryLoadingStatus="@{viewModel.status}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/btn_height"
                android:gravity="center"
                android:orientation="vertical"
                app:confectioneryErrorStatus="@{viewModel.status}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/Small_Text_Style"
                    android:layout_marginTop="@dimen/btn_height"
                    android:gravity="center"
                    android:text="@string/wrong" />

                <Button
                    android:id="@+id/try_btn"
                    style="@style/Button_Style"
                    android:layout_marginTop="@dimen/btn_height"
                    android:text="@string/try_again" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>